--- a/Blog Pessoal/blogpessoal/src/app/inicio/inicio.component.html
+++ b/Blog Pessoal/blogpessoal/src/app/inicio/inicio.component.html
@@ -14,7 +14,8 @@
 
             <div class="row d-flex justify-content-center mt-3 mb-5">
                 <div class="col-md-6">
-                    <button class="btnPostagem mr-2" data-toggle="modal" data-target="#novaPostagem">Nova Postagem</button>
+                    <button class="btnPostagem mr-2" data-toggle="modal" data-target="#novaPostagem">Nova
+                        Postagem</button>
                     <a class="btn btnPostagem" href="#postagens">Ver Postagens</a>
                 </div>
             </div>
@@ -38,7 +39,7 @@
                 data-toggle="tab" href="#todasPostagens" role="tab" aria-controls="nav-todasPostagens"
                 aria-selected="true">Todas as Postagens</a>
 
-            <a class="nav-item nav-link text-secondary font-weight-bold" id="nav-minhasPostagens-tab" data-toggle="tab"
+            <a (click)='findByIdUser()' class="nav-item nav-link text-secondary font-weight-bold" id="nav-minhasPostagens-tab" data-toggle="tab"
                 href="#minhasPostagens" role="tab" aria-controls="nav-minhasPostagens" aria-selected="false">Minhas
                 Postagens</a>
 
@@ -49,19 +50,65 @@
 
     </nav>
 
-    <div class="tab-content" id="nav-tabContent">
+    <div class="tab-content mt-5" id="nav-tabContent">
 
         <div class="tab-pane fade show active" id="todasPostagens" role="tabpanel"
             aria-labelledby="nav-todasPostagens-tab">
-            Todas as Postagens
+
+            <div class="card-columns">
+                <div class="card text-center" *ngFor='let item of listaPostagens'>
+                    <div class="card-body">
+                        <h5 class="card-title m-0">{{item.titulo}}</h5>
+                        <small class="text-muted"> Tema: {{item.tema.descricao}}</small>
+                        <p class="card-text mt-3">{{item.texto}}</p>
+                        <p class="card-text">
+                            <small class="text-muted">{{item.data | date: 'dd/MM/yyyy'}} às {{item.data | date: 'HH:mm'}}</small>
+                        </p>
+                        <p class="card-text">
+                            <small class="text-muted">by: {{item.usuario.nome}}</small>
+                        </p>
+                    </div>
+                </div>
+            </div>
+
         </div>
 
         <div class="tab-pane fade" id="minhasPostagens" role="tabpanel" aria-labellezdby="nav-minhasPostagens-tab">
-            Minhas Postagens
+
+            <div class="card-columns">
+                <div class="card text-center" *ngFor='let item of user.postagem'>
+                    <div class="card-body">
+                        <h5 class="card-title m-0">{{item.titulo}}</h5>
+                        <small class="text-muted"> Tema: {{item.tema.descricao}}</small>
+                        <p class="card-text mt-3">{{item.texto}}</p>
+                        <p class="card-text">
+                            <small class="text-muted">{{item.data | date: 'dd/MM/yyyy'}} às {{item.data | date: 'HH:mm'}}</small>
+                        </p>
+                        <p class="card-text">
+                            <small class="text-muted">by: {{item.usuario.nome}}</small>
+                        </p>
+                    </div>
+                </div>
+            </div>
+
         </div>
 
         <div class="tab-pane fade" id="postagemTema" role="tabpanel" aria-labelledby="nav-postagemTema-tab">
-            Postagens por Tema
+            <div class="card-columns"  *ngFor='let item of tema.postagem'>
+                <div class="card text-center" *ngFor='let item of tema.postagem'>
+                    <div class="card-body">
+                        <h5 class="card-title m-0">{{item.titulo}}</h5>
+                        <small class="text-muted"> Tema: {{item.tema.descricao}}</small>
+                        <p class="card-text mt-3">{{item.texto}}</p>
+                        <p class="card-text">
+                            <small class="text-muted">{{item.data | date: 'dd/MM/yyyy'}} às {{item.data | date: 'HH:mm'}}</small>
+                        </p>
+                        <p class="card-text">
+                            <small class="text-muted">by: {{item.usuario.nome}}</small>
+                        </p>
+                    </div>
+                </div>
+            </div>
         </div>
 
     </div>
@@ -71,8 +118,8 @@
 
 
 <!-- Modal -->
-<div class="modal fade" id="novaPostagem" tabindex="-1" role="dialog"
-    aria-labelledby="TituloModalCentralizado" aria-hidden="true">
+<div class="modal fade" id="novaPostagem" tabindex="-1" role="dialog" aria-labelledby="TituloModalCentralizado"
+    aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content text-white">
             <div class="modal-header nvPost">
@@ -85,26 +132,33 @@
 
                 <div class="form-group">
                     <label for="titulo">Título</label>
-                    <input class="form-control slct" type="text" id="titulo" placeholder="Digite o titulo">
+                    <input [(ngModel)]='postagem.titulo' class="form-control slct" type="text" id="titulo"
+                        placeholder="Digite o titulo">
                 </div>
 
                 <div class="form-group">
                     <label for="texto">Texto</label>
-                    <textarea class= "form-control" name="texto" id="texto"  rows="3"></textarea>
+                    <textarea [(ngModel)]='postagem.texto' class="form-control" name="texto" id="texto"
+                        rows="3"></textarea>
                 </div>
 
                 <div class="form-group mt-1">
-                    <label for="texto">Escolha um tema ou <a class=" text-white newCad" data-dismiss="modal" routerLink="/tema">cadastre um novo</a>: </label>
-                    <select class= "form-control tUser" name="tema" id="tema">
+                    <label for="texto">Escolha um tema ou <a class=" text-white newCad" data-dismiss="modal"
+                            routerLink="/tema">cadastre um novo</a>: </label>
+                    <select class="form-control tUser" name="tema" id="tema" [(ngModel)]='idTema'
+                        (change)='findByIdTema()'>
                         <option class="opt" selected disabled value="">Selecione </option>
-                        <option class="opt" value="">Temas</option>
+                        <option *ngFor='let item of listaTemas' class="opt" value="{{item.id}}">
+                            {{item.descricao}}
+                        </option>
                     </select>
                 </div>
 
             </div>
             <div class="modal-footer d-flex justify-content-center nvPost1">
                 <button type="button" class="btn text-white btnCancel" data-dismiss="modal">Cancelar</button>
-                <button type="button" class="btn text-white btnSend" data-dismiss="modal">Publicar</button>
+                <button type="button" class="btn text-white btnSend" data-dismiss="modal" (click)='publicar'
+                    data-dismiss="modal">Publicar</button>
             </div>
         </div>
     </div>
