--- a/Blog Pessoal/blogpessoal/src/app/inicio/inicio.component.html
+++ b/Blog Pessoal/blogpessoal/src/app/inicio/inicio.component.html
@@ -39,8 +39,9 @@
                 data-toggle="tab" href="#todasPostagens" role="tab" aria-controls="nav-todasPostagens"
                 aria-selected="true">Todas as Postagens</a>
 
-            <a (click)='findByIdUser()' class="nav-item nav-link text-secondary font-weight-bold" id="nav-minhasPostagens-tab" data-toggle="tab"
-                href="#minhasPostagens" role="tab" aria-controls="nav-minhasPostagens" aria-selected="false">Minhas
+            <a (click)='findByIdUser()' class="nav-item nav-link text-secondary font-weight-bold"
+                id="nav-minhasPostagens-tab" data-toggle="tab" href="#minhasPostagens" role="tab"
+                aria-controls="nav-minhasPostagens" aria-selected="false">Minhas
                 Postagens</a>
 
             <a class="nav-item nav-link text-secondary font-weight-bold" id="nav-postagemTema-tab" data-toggle="tab"
@@ -62,7 +63,8 @@
                         <small class="text-muted"> Tema: {{item.tema.descricao}}</small>
                         <p class="card-text mt-3">{{item.texto}}</p>
                         <p class="card-text">
-                            <small class="text-muted">{{item.data | date: 'dd/MM/yyyy'}} às {{item.data | date: 'HH:mm'}}</small>
+                            <small class="text-muted">{{item.data | date: 'dd/MM/yyyy'}} às {{item.data | date:
+                                'HH:mm'}}</small>
                         </p>
                         <p class="card-text">
                             <small class="text-muted">by: {{item.usuario.nome}}</small>
@@ -82,10 +84,15 @@
                         <small class="text-muted"> Tema: {{item.tema.descricao}}</small>
                         <p class="card-text mt-3">{{item.texto}}</p>
                         <p class="card-text">
-                            <small class="text-muted">{{item.data | date: 'dd/MM/yyyy'}} às {{item.data | date: 'HH:mm'}}</small>
+                            <small class="text-muted">{{item.data | date: 'dd/MM/yyyy'}} às {{item.data | date:
+                                'HH:mm'}}</small>
                         </p>
                         <p class="card-text">
                             <small class="text-muted">by: {{item.usuario.nome}}</small>
+
+                            
+                        <a [routerLink]="['/postagem-edit', item.id]" class="text-info mr-3" href="">Editar</a>
+                        <a [routerLink]="['/postagem-delete', item.id]" class="text-danger" href="">Apagar</a>
                         </p>
                     </div>
                 </div>
@@ -94,14 +101,15 @@
         </div>
 
         <div class="tab-pane fade" id="postagemTema" role="tabpanel" aria-labelledby="nav-postagemTema-tab">
-            <div class="card-columns"  *ngFor='let item of tema.postagem'>
+            <div class="card-columns" *ngFor='let item of tema.postagem'>
                 <div class="card text-center" *ngFor='let item of tema.postagem'>
                     <div class="card-body">
                         <h5 class="card-title m-0">{{item.titulo}}</h5>
                         <small class="text-muted"> Tema: {{item.tema.descricao}}</small>
                         <p class="card-text mt-3">{{item.texto}}</p>
                         <p class="card-text">
-                            <small class="text-muted">{{item.data | date: 'dd/MM/yyyy'}} às {{item.data | date: 'HH:mm'}}</small>
+                            <small class="text-muted">{{item.data | date: 'dd/MM/yyyy'}} às {{item.data | date:
+                                'HH:mm'}}</small>
                         </p>
                         <p class="card-text">
                             <small class="text-muted">by: {{item.usuario.nome}}</small>
