--- a/Blog Pessoal/blogpessoal/src/app/inicio/inicio.component.html
+++ b/Blog Pessoal/blogpessoal/src/app/inicio/inicio.component.html
@@ -1,54 +1,52 @@
 <div class="container-fluid">
 
-    <div class="row d-flex align-items-center box">
-        <!--Deixa a foto e texto alinhados-->
+    <div class="row bg-secondary d-flex align-items-center box">
+        <div class="col-md-6">
 
-        <div class="col-md-6 mt-5">
-            <!--COLUNA DA ESQUERDA-->
             <div class="row d-flex justify-content-center">
-                <div class="col-md-6 text-white">
-                    <h1>Seja bem-vinde! </h1>
-                    <h5>Expresse aqui seus pensamentos e opiniões sobre a pagina</h5>
+                <div class="col-md-6 text-white ">
+                    <h1 class="fs-54">Seja bem vindo(a)!</h1>
+                    <h5 class="fs-18">expresse aqui os seus pensamentos e opniões!</h5>
                 </div>
             </div>
 
             <div class="row d-flex justify-content-center mt-3 mb-5">
                 <div class="col-md-6">
-                    <button class="btnPostagem mr-2" data-toggle="modal" data-target="#novaPostagem">Nova
+                    <button class="btn btnPostagem mr-2" data-toggle="modal" data-target="#novaPostagem">Nova
                         Postagem</button>
                     <a class="btn btnPostagem" href="#postagens">Ver Postagens</a>
                 </div>
             </div>
+
         </div>
 
 
         <div class="col-md-6 d-flex justify-content-center">
-            <!--COLUNA DA DIREITA-->
             <img src="https://raw.githubusercontent.com/LucasLM1/Formulario-HTML-e-CSS/3d5dae29144c750b0ecc4cd46cd7c0d84f74c091/FormLacos_da_Comunidade/CadEvento/fotoVetorizada.svg"
                 alt="imagem vetorizada" width="500px" height="500px">
         </div>
-
     </div>
 
 </div>
 
 <div class="container mb-5 mt-5" id="postagens">
+
     <nav>
         <div class="nav nav-tabs d-flex justify-content-center" id="nav-tab" role="tablist">
+
             <a class="nav-item nav-link active text-secondary font-weight-bold" id="nav-todasPostagens-tab"
                 data-toggle="tab" href="#todasPostagens" role="tab" aria-controls="nav-todasPostagens"
                 aria-selected="true">Todas as Postagens</a>
 
             <a (click)='findByIdUser()' class="nav-item nav-link text-secondary font-weight-bold"
                 id="nav-minhasPostagens-tab" data-toggle="tab" href="#minhasPostagens" role="tab"
-                aria-controls="nav-minhasPostagens" aria-selected="false">Minhas
-                Postagens</a>
+                aria-controls="nav-minhasPostagens" aria-selected="false">Minhas Postagens</a>
 
             <a class="nav-item nav-link text-secondary font-weight-bold" id="nav-postagemTema-tab" data-toggle="tab"
                 href="#postagemTema" role="tab" aria-controls="nav-postagemTema" aria-selected="false">Postagens por
-                Tema</a>
-        </div>
+                tema</a>
 
+        </div>
     </nav>
 
     <div class="tab-content mt-5" id="nav-tabContent">
@@ -62,20 +60,20 @@
                         <h5 class="card-title m-0">{{item.titulo}}</h5>
                         <small class="text-muted"> Tema: {{item.tema.descricao}}</small>
                         <p class="card-text mt-3">{{item.texto}}</p>
-                        <p class="card-text">
-                            <small class="text-muted">{{item.data | date: 'dd/MM/yyyy'}} às {{item.data | date:
-                                'HH:mm'}}</small>
-                        </p>
-                        <p class="card-text">
-                            <small class="text-muted">by: {{item.usuario.nome}}</small>
-                        </p>
+                        <p class="card-text"><small class="text-muted">
+                                {{item.data | date: 'dd/MM/yyyy'}} às {{item.data | date: 'HH:mm'}}
+                            </small></p>
+
+                        <p class="card-text"><small class="text-muted">
+                                by: {{item.usuario.nome}}
+                            </small></p>
                     </div>
                 </div>
             </div>
 
         </div>
 
-        <div class="tab-pane fade" id="minhasPostagens" role="tabpanel" aria-labellezdby="nav-minhasPostagens-tab">
+        <div class="tab-pane fade" id="minhasPostagens" role="tabpanel" aria-labelledby="nav-minhasPostagens-tab">
 
             <div class="card-columns">
                 <div class="card text-center" *ngFor='let item of user.postagem'>
@@ -83,17 +81,15 @@
                         <h5 class="card-title m-0">{{item.titulo}}</h5>
                         <small class="text-muted"> Tema: {{item.tema.descricao}}</small>
                         <p class="card-text mt-3">{{item.texto}}</p>
-                        <p class="card-text">
-                            <small class="text-muted">{{item.data | date: 'dd/MM/yyyy'}} às {{item.data | date:
-                                'HH:mm'}}</small>
+                        <p class="card-text"><small class="text-muted">
+                                {{item.data | date: 'dd/MM/yyyy'}} às {{item.data | date: 'HH:mm'}}
+                            </small>
                         </p>
-                        <p class="card-text">
-                            <small class="text-muted">by: {{item.usuario.nome}}</small>
 
-                            
-                        <a [routerLink]="['/postagem-edit', item.id]" class="text-info mr-3" href="">Editar</a>
-                        <a [routerLink]="['/postagem-delete', item.id]" class="text-danger" href="">Apagar</a>
-                        </p>
+
+                            <a [routerLink]="['/postagem-edit', item.id]" class="text-info mr-3" href="">Editar</a>
+                            <a [routerLink]="['/postagem-delete', item.id]" class="text-danger" href="">Apagar</a>
+
                     </div>
                 </div>
             </div>
@@ -101,27 +97,31 @@
         </div>
 
         <div class="tab-pane fade" id="postagemTema" role="tabpanel" aria-labelledby="nav-postagemTema-tab">
-            <div class="card-columns" *ngFor='let item of tema.postagem'>
+
+
+            <div class="card-columns" *ngFor='let tema of listaTemas'>
                 <div class="card text-center" *ngFor='let item of tema.postagem'>
                     <div class="card-body">
                         <h5 class="card-title m-0">{{item.titulo}}</h5>
-                        <small class="text-muted"> Tema: {{item.tema.descricao}}</small>
                         <p class="card-text mt-3">{{item.texto}}</p>
-                        <p class="card-text">
-                            <small class="text-muted">{{item.data | date: 'dd/MM/yyyy'}} às {{item.data | date:
-                                'HH:mm'}}</small>
-                        </p>
-                        <p class="card-text">
-                            <small class="text-muted">by: {{item.usuario.nome}}</small>
-                        </p>
+                        <p class="card-text"><small class="text-muted">
+                                {{item.data | date: 'dd/MM/yyyy'}} às {{item.data | date: 'HH:mm'}}
+                            </small></p>
+
+                        <p class="card-text"><small class="text-muted">
+                                by: {{item.usuario.nome}}
+                            </small></p>
+
                     </div>
                 </div>
             </div>
-        </div>
 
+        </div>
     </div>
 
 </div>
+
+
 
 
 
@@ -140,8 +140,8 @@
 
                 <div class="form-group">
                     <label for="titulo">Título</label>
-                    <input [(ngModel)]='postagem.titulo' class="form-control slct" type="text" id="titulo"
-                        placeholder="Digite o titulo">
+                    <input [(ngModel)]='postagem.titulo' type="text" class="form-control slct" id="titulo"
+                        placeholder="Digite o título">
                 </div>
 
                 <div class="form-group">
@@ -150,12 +150,12 @@
                         rows="3"></textarea>
                 </div>
 
-                <div class="form-group mt-1">
+                <div class="form-group">
                     <label for="texto">Escolha um tema ou <a class=" text-white newCad" data-dismiss="modal"
-                            routerLink="/tema">cadastre um novo</a>: </label>
-                    <select class="form-control tUser" name="tema" id="tema" [(ngModel)]='idTema'
+                            routerLink='/tema'>cadastre um
+                            novo</a>: </label>
+                    <select name="tema" id="tema" class="form-control tUser" [(ngModel)]='idTema'
                         (change)='findByIdTema()'>
-                        <option class="opt" selected disabled value="">Selecione </option>
                         <option *ngFor='let item of listaTemas' class="opt" value="{{item.id}}">
                             {{item.descricao}}
                         </option>
@@ -164,9 +164,8 @@
 
             </div>
             <div class="modal-footer d-flex justify-content-center nvPost1">
-                <button type="button" class="btn text-white btnCancel" data-dismiss="modal">Cancelar</button>
-                <button type="button" class="btn text-white btnSend" data-dismiss="modal" (click)='publicar'
-                    data-dismiss="modal">Publicar</button>
+                <button type="button" class="btn btnCancel" data-dismiss="modal">Cancelar</button>
+                <button type="button" class="btn btnSend" (click)='publicar()' data-dismiss="modal">Publicar</button>
             </div>
         </div>
     </div>
